	* flow: Variables must not change type during lifetime.
	* flow: Every handler/function call statement and variable declaration must be followed by a semicolon ';'.
	* x0d: Added --dump-ast parameter to dump Flow's parsed AST.
	* director: Added experimental response output caching support.
	* x0d: plugin "vhost" has been removed in favor of the new match-keyword.

0.7.0 (2013-10-18)

	* general: major source tree restructures, to make things more clear.
	* general: Port of XzeroBase and XzeroHttp to Mac OS/X, more to follow.
	* http: libXzeroHttp now no longer depends on libXzeroFlow, eliminating unneeded dependencies.
	* http: Added C-API for basic HTTP server embedding that you can use by linking against libx0capi.so.
	* http: Fixing regression regarding HTTP pipelining (#52).
	* http: Added support opportunistic writes.
	* http: Added SO_LINGER support via `lingering(timespan)` setup property.
	Must be enabled at compilation time via -DWITH_OPPORTUNISTIC_WRITE=ON.
	* base, flow: added support for multi-accept
	Must be enabled at compilation time via -DWITH_MULTI_ACCEPT=ON.
	* flow: ruby-1.9 alike named parameter association.
	* flow: Added new read-property `req.query`.
	* core: Introduce severities: crit, alert, emerg.
	* core: Support SO_REUSEPORT (as introduced in Linux Kernel 3.9.0, and
			supported by other UNIX OSes already)
	* x0d: Added bash completion.
	* x0d: Support -e epoll,select,poll,.... to choose event-system backend x0d should run on.
	* plugins: removed plugins proxy & fastcgi. Deprecated by director plugin.
	* plugins: accesslog plugin now also supports syslog target
	* plugins: auth plugin now supports PAM authentication (compile-time enabled by default)
	* plugins: director plugin has experimental support for backend acceleration
	* plugins: director plugin has initial support for HAproxy compatible CSV output
	* plugins: director plugin fixed wrt. off-by-one bug in scheduler.load stats.